--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "ta-studio",
+  "homepage": "http://notkelloggstony.github.io/ta-studio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mdi/js": "^6.4.95",
+    "@mdi/react": "^1.5.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
